fix bugs after hidding navbar on mobiles

--- a/src/mobiles.scss
+++ b/src/mobiles.scss
@@ -9,54 +9,10 @@
 }
 
 #navbar {
+	height: 0;
+	width: 0;
+	z-index: -999;
 	display: none;
-	height: 5vh;
-	width: 100vw;
-	-webkit-box-shadow: 0px -3px 5px 0px rgba(0,0,0,0.75);
-	-moz-box-shadow: 0px -3px 5px 0px rgba(0,0,0,0.75);
-	box-shadow: 0px -3px 5px 0px rgba(0,0,0,0.75);
-
-	display: flex;
-	flex-direction: row;
-	bottom: 0;
-	padding: 0 2.5vw;
-
-	z-index: 1; 
-
-	-webkit-touch-callout: none; /* iOS Safari */
-	-webkit-user-select: none; /* Safari */
-	 -khtml-user-select: none; /* Konqueror HTML */
-	   -moz-user-select: none; /* Firefox */
-	    -ms-user-select: none; /* Internet Explorer/Edge */
-	        user-select: none; /* Non-prefixed version, currently
-	                              supported by Chrome and Opera */
-	ul {
-		display: flex;
-		flex-direciton: row;
-		align-items: center;
-		width: 40vw;
-		margin-top: 0;
-		list-style: none;
-
-		.navbar-icon {
-			font-size: 4vw;
-		}
-
-		li {
-			width: 10vw;
-		}
-
-	}
-
-	h1 {
-		width: 55vw;
-		font-size: 1.9vw;
-		margin-top: 0;
-		transform: rotate(0deg);
-		text-align: right;
-		line-height: 5vh;
-		vertical-align: middle;		
-	}
 }
 
 
